--- a/src/main/resources/static/js/js26-object.html
+++ b/src/main/resources/static/js/js26-object.html
@@ -4,7 +4,80 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<script>
+  let a = 3;
+  let b = a;
+  console.log(a, b); // 3 3
 
+  a = 5;
+  console.log(a, b); // 5 3
+  // 위 코드는 다음과 같은 메모리 공간을 만듭니다:
+  //
+  //   a라는 공간에 3이 저장됩니다.
+  //   b에는 a의 값 3이 복사되어 저장됩니다.
+  //   a라는 공간의 값을 변경
+  //   b라는 공간의 값은 그대로
+  //   b 공간의 값도 변화하고 싶다면?
+  //   a = 5 , b = a를 다시해서 변경된 a 값을 다시 저장해야됨
+
+
+  let c = {age: 55};
+  let d = c;
+  console.log(c.age, d.age); // 55 55
+
+  c.age = 66;
+  console.log(c.age, d.age); // 66 66
+  // c와 d 그리고 age 모두 각각의 메모리공간 확보,
+  // c와 d 둘다 age의 메모리 값을 가짐.
+  // 결국 age값이 바뀌면 a,b 둘 다 바뀜
+
+
+  function fun1(a) { // String a 라고 생각하고, 그 a 값을 a.city로 대입한다고 생각하자
+    a.city = "seoul";
+  }
+
+  let e = {city: "paris"};
+
+  console.log(e.city); // "paris"
+  fun1(e);
+  console.log(e.city); // "seoul"
+
+
+  let f = {
+    name: "son",
+    info: {
+      height: 200,
+      weight: 300
+    }
+  };
+
+  // 공간이 총 4개가 있음, 1.name 2.info 3.height 4.weight
+  // name 에는 son값이 있음, height에는 200값이 weight에는 300값이 있음
+  // 마지막으로 info메모리는 height와 weight가 연결되어있음.
+  // 안에 들어간게 아니라 각자의 메모리 공간들이 링크 되있는거
+
+  let g = {};
+  g.name = f.name;
+  g.info = f.info;
+
+  console.log(f.name); // son
+  console.log(g.name); // son
+
+  console.log(f.info.height);
+  console.log(f.info.weight);
+
+  console.log(g.info.height);
+  console.log(g.info.weight);
+
+  f.name = "lee";
+  console.log(f.name);
+  console.log(g.name);
+
+  f.info.height = 2000;
+  console.log(f.info.height);
+  console.log(g.info.height);
+
+</script>
+<body>
 </body>
 </html>
