--- a/src/main/resources/static/js/js28-dom.html
+++ b/src/main/resources/static/js/js28-dom.html
@@ -18,7 +18,7 @@
   a.info();
 
 
-  // 이미 존재하는 객체 window(브라우저)와 메소드
+  // 이미 존재하는 객체 window(브라우저)와 인덱스
   window.alert();
   window.confirm();
   window.prompt();
