--- a/src/main/resources/static/js/js40-arrray.html
+++ b/src/main/resources/static/js/js40-arrray.html
@@ -12,7 +12,7 @@
   let b = [3, 1, 4];
   let c = ["s", 0, 1, 2, true, false,
     function () {
-    }, {}, []];
+    }, {}, []]; //{함수} , {객체}, [배열]
 
   // 속성 (property)
   // length : item의 수(배열의 길이)
@@ -95,7 +95,7 @@
   console.log(g);
   g.unshift("d")
 
-  // 코자 작성 shift 사용
+  // 코드 작성 shift 사용
 
 
 </script>
