--- a/src/main/resources/static/js/js46-sort.html
+++ b/src/main/resources/static/js/js46-sort.html
@@ -16,6 +16,7 @@
     <p>Aliquam?</p>
 </div>
 <script>
+  // 버튼 설정, 배열 만들기
   const btn = document.querySelector("button");
   btn.addEventListener("click", function () {
     const paras = document.querySelectorAll("p");
@@ -24,6 +25,7 @@
       parasArray.push(p);
     }
 
+    // 오름차순 설정
     parasArray.sort((e1, e2) => {
       if (e1.innerHTML > e2.innerHTML) {
         return 1;
@@ -34,12 +36,14 @@
       }
     });
 
+    // 기존 <p></p>> 지우고 오름차순으로 채우기
     const div = document.querySelector("div");
     parasArray.forEach(e => {
       e.remove();
       div.append(e);
     })
   });
+
 
   const btn2 = document.querySelector("button:nth-child(2)");
   btn2.addEventListener("click", () => {
