--- a/src/main/resources/static/js/js52-map.html
+++ b/src/main/resources/static/js/js52-map.html
@@ -7,6 +7,9 @@
 <body>
 
 <script>
+  // map은 원본 배열을 변경하지 않고 새로운 배열(목적에 맞게 변환된 item들)을 반환합니다.
+  // 증감은 안되고 원본 배열과 item수는 같아야함.
+
   const a = [3, 1, 4, 1, 5, 9, 2];
   const r1 = a.map(() => 10);
 
