--- a/src/main/resources/static/js/js70-react.html
+++ b/src/main/resources/static/js/js70-react.html
@@ -5,15 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-
 <div id="root"></div>
 
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"/></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"/></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <script type="text/jsx">
-
   let arr = ["Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, quasi.",
     "Assumenda beatae ducimus enim est itaque minus nam necessitatibus totam.",
     "Blanditiis consequatur ducimus harum, ipsum molestiae nisi totam ut veritatis.",
@@ -25,26 +23,26 @@
     "Animi asperiores consectetur corporis harum in ipsum laborum quibusdam similique?",
     "Aliquam commodi dolores doloribus esse ipsam iste nesciunt veritatis voluptate."]
 
-  function App(){
+  function App() {
     const [texts, setTexts] = React.useState(arr);
 
-    function handleKeyup(e) {
+    function handleKeyUp(e) {
       const keyword = e.target.value;
       setTexts(arr.filter(item => item.toLowerCase()
         .includes(keyword.toLowerCase())));
     }
 
     return <div>
-      <input type="text" onKeyUp="{handleKeyUp}"/>
+      <input type="text" onKeyUp={handleKeyUp}/>
       <ul>
         {texts.map((text) => <li>{text}</li>)}
       </ul>
     </div>
+
   }
 
   ReactDOM.createRoot(document.querySelector("#root"))
     .render(<App/>);
-
 </script>
 </body>
 </html>
